[package]
name = "zian"
version = "0.1.0"
authors = ["Austin Ray <austin@austinray.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
