[package]
name = "zian"
version = "0.1.0"
authors = ["Austin Ray <austin@austinray.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.1"
actix-web = "3"
async-trait = "0.1.48"
hex = "0.4"
hmac = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"]}
